@@ -49,19 +49,18 @@ AC_DEFUN([GROFF_PRINT],
    AC_SUBST([DVIPRINT])
    AC_MSG_RESULT([$DVIPRINT])])
 
+# Bison-generated parsers have problems with C++ compilers other than
+# g++.  Thus, byacc is preferred over bison.  If no yacc program is
+# available, we issue an error only if building from Git, because files
+# generated by a yacc are already present in the distribution archive.
 
-# Bison generated parsers have problems with C++ compilers other than
-# g++.  So byacc is preferred over bison.  If no 'yacc' program is
-# available, we issue an error only if building from the source as in
-# distributed tarball files generated by 'yacc' are already present.
-
-AC_DEFUN([GROFF_PROG_YACC],
-  [AC_CHECK_PROGS([YACC], [byacc 'bison -y' yacc], [missing])
-  if test "$YACC" = missing -a -d "$srcdir"/.git; then
-    AC_MSG_ERROR([Could not find 'yacc' or 'bison'], 1)
+AC_DEFUN([GROFF_PROG_YACC], [
+  AC_CHECK_PROGS([YACC], [byacc 'bison -y' yacc], [missing])
+  if test "$YACC" = missing -a -d "$srcdir"/.git
+  then
+    AC_MSG_ERROR([could not find 'byacc', 'bison', or 'yacc'], 1)
   fi
-  ])
-
+])
 
 # We need Perl 5.6.1 or newer.
 
